# workflow-container-tools

./: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
doc/design/: workflow-container-authoring.md
doc/goal/: 2026-07-14-goal-brainstorm.md
doc/spec/: 2026-07-14-goal-brainstorm.md
doc/superpowers/plans/: 2026-07-03-workflow-container-developer.md  2026-07-03-workflow-container-runtime-extraction.md  2026-07-04-workflow-container-contract.md  2026-07-04-workflow-container-skill-audit.md  2026-07-06-workflow-container-stage-runtime.md
doc/superpowers/specs/: 2026-07-03-workflow-container-developer-design.md  2026-07-04-workflow-container-contract-design.md  2026-07-04-workflow-container-skill-audit-design.md  2026-07-06-workflow-container-stage-runtime-design.md
plugins/agent-workflows/.codex-plugin/: plugin.json
plugins/agent-workflows/lib/: subagent-role-contract.md
plugins/agent-workflows/lib/explain-skill/: protocol.md
plugins/agent-workflows/lib/section-audit/: protocol.md
plugins/agent-workflows/lib/sequential-batch/: protocol.md  subagent-protocol.md  worker-role.md
plugins/marketplace-agent-tools/.codex-plugin/: plugin.json
plugins/workflow-container-agent-tools/.codex-plugin/: plugin.json
plugins/workflow-container-tools/.codex-plugin/: plugin.json
test/: test_audit.py  test_cli.py  test_marketplace.py  test_package.py  test_plugin_skills.py  test_project.py
workflow_container_developer/: audit.py  cli.py  project.py
workflow_container_tools/: __init__.py  cli.py  project.py
(+47 files in other folders)
