[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "workflow-container-tools"
version = "0.1.0"
description = "Codex plugin marketplace source for workflow-container authoring and audit skills with optional local discovery CLI"
readme = "README.md"
requires-python = ">=3.14"

[project.optional-dependencies]
test = [
  "pytest>=8.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["workflow_container_tools"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]

[tool.black]
target-version = ["py314"]
line-length = 120
